# Autonomy-Calibration-Environment

./: .dockerignore  .gitignore  Blog.md  Dockerfile  OpenEnv_Training.ipynb  README.md  WALKTHROUGH.md  autonomy_grpo_training.ipynb  client.py  database.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  train.py  train_rl.py  utils.py  visualize.py
environment/: __init__.py  calibration_reward.py  environment.py  rewards.py  scenarios.py
notebooks/: training.ipynb
scripts/: generate_plots.py  inference.py  run_eval.py
server/: app.py
static/: app.js  index.html  style.css
tasks/: __init__.py  base.py  devops_incident.py  email_triage.py  financial_request.py
tests/: test_tasks.py
