[project]
name = "epistemic-agency-hub"
version = "2.0.0"
description = "Autonomy Calibration Hub for Epistemic Agency Training (OpenEnv India Hackathon 2026)"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.9.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "jinja2>=3.1.3",
    "aiofiles>=23.0.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "trl>=0.8.6",
]

[project.scripts]
serve = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
